<resources>
    <string name="app_name">Courses App</string>
    <string name="middle_name">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="eamil">eamil</string>
    <string name="location">Location</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirmpassword">confirmPassword</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="student">student</string>
    <string name="lecturer">lecturer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video_name">Video Name</string>
    <string name="save">save</string>
</resources>