<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LecturerFragments.Profile2LecturerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/logOutBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_baseline_exit_to_app_24"
            android:layout_margin="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"


            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/FirstNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/first_name"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/FirstNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="mmm"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/FirstNameLabel" />

                <TextView
                    android:id="@+id/MiddleNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/middle_name"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/FirstNameEdit" />

                <EditText
                    android:id="@+id/MiddleNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="mmm"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/MiddleNameLabel" />

                <TextView
                    android:id="@+id/LastNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/last_name"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/MiddleNameEdit" />

                <EditText
                    android:id="@+id/LastNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="mmm"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/LastNameLabel" />

                <Button
                    android:id="@+id/BirthdayNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/birthday"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/LastNameEdit" />

                <TextView
                    android:id="@+id/BirthdayEdit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#ff5566"
                    android:inputType="date"
                    android:text="mmm"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/BirthdayNameLabel" />

                <TextView
                    android:id="@+id/LocationNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/location"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/BirthdayEdit" />

                <EditText
                    android:id="@+id/LocationNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="mmm"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/LocationNameLabel" />

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/email"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/LocationNameEdit" />

                <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/emailLabel" />

                <TextView
                    android:id="@+id/PhoneNumberLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/phone_number"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailEdit" />

                <EditText
                    android:id="@+id/PhoneNumberEdit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:inputType="phone"
                    android:text="0000000"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/PhoneNumberLabel" />

                <TextView
                    android:id="@+id/PasswordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/password"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/PhoneNumberEdit" />

                <EditText
                    android:id="@+id/PasswordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/PasswordLabel" />

                <TextView
                    android:id="@+id/confirmLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/confirmpassword"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/PasswordEdit" />

                <EditText
                    android:id="@+id/confirmPasswordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/confirmLabel" />

                <Button
                    android:id="@+id/UpdateButton"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="Update"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/confirmPasswordEdit" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>