<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".Log.SignUp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:text="LOGIN"
        android:textColor="#FFAB2E"
        android:textSize="24sp"
        />

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo2"
        android:layout_marginTop="120dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/imglogo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have account?"
                app:layout_constraintTop_toBottomOf="@id/SignupButton"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="90dp"
                android:textColor="#fff"
                android:id="@+id/ques1"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/FirstNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/first_name"
                android:textColor="#FFAB2E"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/FirstNameEdit"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="mmm"
                android:layout_height="60dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_shape1"
                android:textColorHint="#88ffffff"
                app:layout_constraintTop_toBottomOf="@id/FirstNameLabel" />

            <TextView
                android:id="@+id/MiddleNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/middle_name"
                android:textColor="#FFAB2E"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/FirstNameEdit" />

            <EditText
                android:id="@+id/MiddleNameEdit"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="mmm"
                android:layout_height="60dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_shape1"
                android:textColorHint="#88ffffff"
                app:layout_constraintTop_toBottomOf="@id/MiddleNameLabel" />

            <TextView
                android:id="@+id/LastNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/last_name"
                android:textColor="#FFAB2E"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/MiddleNameEdit" />

            <EditText
                android:id="@+id/LastNameEdit"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="mmm"
                android:layout_height="60dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_shape1"
                android:textColorHint="#88ffffff"
                app:layout_constraintTop_toBottomOf="@id/LastNameLabel" />

            <Button
                android:id="@+id/BirthdayNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/birthday"
                android:background="@drawable/rec1"
                android:textColor="#fff"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LastNameEdit" />

            <TextView
                android:id="@+id/BirthdayEdit"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="date"
                android:text="mmm"
                android:layout_height="60dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_shape1"
                android:textColorHint="#88ffffff"
                app:layout_constraintTop_toBottomOf="@id/BirthdayNameLabel" />

            <TextView
                android:id="@+id/LocationNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/location"
                android:textColor="#FFAB2E"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/BirthdayEdit" />

            <EditText
                android:id="@+id/LocationNameEdit"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="mmm"
                android:layout_height="60dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_shape1"
                android:textColorHint="#88ffffff"
                app:layout_constraintTop_toBottomOf="@id/LocationNameLabel" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/email"
                android:textColor="#FFAB2E"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LocationNameEdit" />

            <EditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textEmailAddress"
                android:layout_height="60dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_shape1"
                android:textColorHint="#88ffffff"
                app:layout_constraintTop_toBottomOf="@id/emailLabel" />

            <TextView
                android:id="@+id/PhoneNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/phone_number"
                android:textColor="#FFAB2E"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailEdit" />

            <EditText
                android:id="@+id/PhoneNumberEdit"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="phone"
                android:text="0000000"
                android:layout_height="60dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_shape1"
                android:textColorHint="#88ffffff"
                app:layout_constraintTop_toBottomOf="@id/PhoneNumberLabel" />

            <TextView
                android:id="@+id/PasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/password"
                android:textColor="#FFAB2E"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/PhoneNumberEdit" />

            <EditText
                android:id="@+id/PasswordEdit"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="60dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_shape1"
                android:textColorHint="#88ffffff"
                app:layout_constraintTop_toBottomOf="@id/PasswordLabel" />

            <TextView
                android:id="@+id/confirmLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/confirmpassword"
                android:textColor="#FFAB2E"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/PasswordEdit" />

            <EditText
                android:id="@+id/confirmPasswordEdit"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="60dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_shape1"
                android:textColorHint="#88ffffff"
                app:layout_constraintTop_toBottomOf="@id/confirmLabel" />

            <TextView
                android:id="@+id/chose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Choose the type of account :"
                android:textColor="#FFAB2E"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirmPasswordEdit"
                />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chose">

                <RadioButton
                    android:id="@+id/radio_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/student"
                    android:textColor="#fff"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="20dp"
                    />

                <RadioButton
                    android:id="@+id/radio_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lecturer"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:textColor="#fff"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="20sp" />
            </RadioGroup>

            <Button
                android:id="@+id/SignupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:background="@drawable/rec1"
                android:textSize="22sp"
                android:textColor="#fff"
                android:layout_marginTop="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroup" />

            <TextView
                android:id="@+id/loginGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text=" Login"
                android:textColor="#FFAB2E"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintLeft_toRightOf="@id/ques1"
                app:layout_constraintTop_toBottomOf="@id/SignupButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>